objects/Account_Division_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account_Division_Data_Config__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Division Data Config</label>
        <referenceTo>Account_Division_Data_Config__c</referenceTo>
        <relationshipName>Account_Attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Attributes</relationshipLabel>
        <relationshipName>Account_Division_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Set_lkp__c</fullName>
        <formula>text(Account_Division_Data_Config__r.Attribute_Set__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_lkp__c</fullName>
        <formula>Account_Division_Data_Config__r.Attribute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Attributes</relationshipLabel>
        <relationshipName>Marketing_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_lkp__c</fullName>
        <formula>Text( Account_Division_Data_Config__r.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Attribute_Value__c</fullName>
        <description>Formula to check if a marketing value has a value. Returns &quot;Yes&quot; if it has, &quot;No&quot; if it doesnt</description>
        <formula>IF((ISBLANK(Value__c)),False,True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to check if a marketing value has a value. Returns &quot;Yes&quot; if it has, &quot;No&quot; if it doesnt</inlineHelpText>
        <label>Has Attribute Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueAgg__c</fullName>
        <formula>if (LEN(Value__c)=0,Text( ValueNumber__c ),Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueNumber__c</fullName>
        <label>ValueNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>must_be_related_to_a_record</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Account__c) &amp;&amp; ISBLANK(Contact__c)</errorConditionFormula>
        <errorMessage>The marketing attribute must be related to a record</errorMessage>
    </validationRules>
</CustomObject>